Fixed navbar items effect and gap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1864,6 +1864,18 @@ footer {
   --shadow-3: 3px 3px var(--seashell);
   --shadow-4: 5px 5px var(--old-rose);
 }
+body.dark-mode .navbar-link:hover{
+  color: hsl(357, 93%, 84%);
+}
+body.dark-mode .navbar-link::after{
+  content: '';
+  background-color: var(--old-rose);
+  box-shadow: 0 0 10px hsl(357, 93%, 84%, 0.5);
+}
+
+body.dark-mode .navbar-link:hover::after{
+  box-shadow: 0 0 20px hsl(357, 93%, 84%, 0.7);
+}
 
 /* Switch Container */
 .switch-container {
